[package]
name = "synthez"
version = "0.3.1"
edition = "2021"
rust-version = "1.62"
description = "Steroids for `syn`, `quote` and `proc-macro2` crates."
authors = ["Kai Ren <tyranron@gmail.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/synthez"
homepage = "https://github.com/arcane-rs/synthez"
repository = "https://github.com/arcane-rs/synthez"
readme = "README.md"
keywords = ["codegen", "derive", "macro", "syn"]
categories = [
    "development-tools::build-utils",
    "development-tools::procedural-macro-helpers",
]
include = ["/src/", "/Cargo.toml", "/CHANGELOG.md", "/LICENSE.md", "/README.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Same as `full` feature of `syn` crate.
# Enables support of data structures for representing the syntax tree of all
# valid Rust source code, including items and expressions.
full = ["syn/full", "synthez-core/full"]

[dependencies]
synthez-codegen = { version = "0.3.1", path = "./codegen" }
synthez-core = { version = "0.3.1", path = "./core" }

# Repeats the one from `synthez-core` crate.
# For correct Rust docs rendering only!
# TODO: Remove once docs render correctly without it.
syn = { version = "2.0", features = ["clone-impls", "derive", "extra-traits", "parsing", "printing"], default-features = false }

[workspace]
members = ["codegen", "core"]
