[package]
name = "synthez-codegen"
version = "0.2.0"
edition = "2021"
rust-version = "1.62"
description = "Internal codegen shim of `synthez` crate."
authors = ["Kai Ren <tyranron@gmail.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/synthez-codegen"
homepage = "https://github.com/arcana-rs/synthez/tree/main/codegen"
repository = "https://github.com/arcana-rs/synthez/tree/main/codegen"
readme = "README.md"
categories = ["development-tools::build-utils"]
include = ["/src/", "/Cargo.toml", "/README.md"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.72", features = ["parsing", "proc-macro"], default-features = false }
synthez-core = { version = "0.2", path = "../core" }

[dev-dependencies]
proc-macro2 = { version = "1.0.4", default-features = false }
syn = { version = "1.0.72", features = ["derive", "parsing", "proc-macro"], default-features = false }
synthez = { path = "..", features = ["full"] }
