[package]
name = "synthez-core"
version = "0.3.1"
edition = "2021"
rust-version = "1.62"
description = "Internal implementations of `synthez` crate."
authors = ["Kai Ren <tyranron@gmail.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/synthez-core"
homepage = "https://github.com/arcane-rs/synthez/tree/main/core"
repository = "https://github.com/arcane-rs/synthez/tree/main/core"
readme = "README.md"
categories = ["development-tools::procedural-macro-helpers"]
include = ["/src/", "/Cargo.toml", "/README.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Same as `full` feature of `syn` crate.
# Enables support of data structures for representing the syntax tree of all
# valid Rust source code, including items and expressions.
full = ["syn/full"]

[dependencies]
proc-macro2 = { version = "1.0.4", default-features = false }
quote = { version = "1.0.9", default-features = false }
sealed = { version = "0.5", default-features = false }
syn = { version = "2.0", features = ["clone-impls", "derive", "extra-traits", "parsing", "printing"], default-features = false }

[dev-dependencies]
synthez = { path = "..", features = ["full"] }
